updated format of project cards

--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
                     <!-- row 1 featured -->
                     <h4 class="card-title">Featured</h4>
                     <hr>
-                    <div class="row" id="projectRow1">
+                    <div class="row" class="projectRow">
 
                         <!-- TollTally -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/Project1/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -281,6 +281,8 @@
                                         following API's were used: TollGuru, Google
                                         Directions, Google Distance Matrix, Google Geocoding, Google Maps Javascript,
                                         and Google Places.</p>
+                                        </div>
+                                        <div class="card-footer">
                                     <a href="https://github.com/MR-Stan/Project1" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -290,7 +292,7 @@
 
                         <!-- Star Wars RPG -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -303,6 +305,8 @@
                                         playing game (RPG). Select a hero to begin your journey and use
                                         the force to defeat all enemies. It was created with HTML, CSS, Javascript, and
                                         jQuery.</p>
+                                        </div>
+                                        <div class="card-footer">
                                     <a href="https://github.com/MR-Stan/unit-4-game" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -312,7 +316,7 @@
 
                         <!-- Train Scheduler -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
                                         <img class="card-image-top embed-responsive-item" src="assets/images/train.PNG"
@@ -327,6 +331,8 @@
                                         variety of other applications. It was
                                         created with HTML, CSS, Bootstrap, Javascript, jQuery, Moment.js, and Firebase.
                                     </p>
+                                    </div>
+                                    <div class="card-footer">
                                     <a href="https://github.com/MR-Stan/Train-Scheduler" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -338,11 +344,11 @@
                     <!-- row 2 projects -->
                     <h4 class="card-title">Others</h4>
                     <hr>
-                    <div class="row" id="projectRow2">
+                    <div class="row" class="projectRow">
 
                         <!-- GifTastic -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -359,6 +365,8 @@
                                         static, but can be played with a single click and paused again with an
                                         additional click. This site was created with
                                         HTML, CSS, JavaScript, and jQuery.</p>
+                                        </div>
+                                        <div class="card-footer">
                                     <a href="https://github.com/MR-Stan/GifTastic" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -368,7 +376,7 @@
 
                         <!-- Trivia Game -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
                                         <img class="card-image-top embed-responsive-item" src="assets/images/trivia.PNG"
@@ -380,6 +388,8 @@
                                     <p class="card-text">Random Trivia is a trivia game of random questions. It utilizes
                                         timeouts and intervals to limit the user's time to
                                         answer the questions. It was created with HTML, CSS, Javascript, and jQuery.</p>
+                                        </div>
+                                        <div class="card-footer">
                                     <a href="https://github.com/MR-Stan/TriviaGame" class="btn" target="_blank"><i
                                             class="fab fa-github fa-2x"></i>
                                     </a>
@@ -389,7 +399,7 @@
 
                         <!-- Coming Soon -->
                         <div class="col-xs-12 col-sm-6 col-xl-4">
-                            <div class="card roundCorner">
+                            <div class="card roundCorner h-100">
                                 <div class="embed-responsive embed-responsive-16by9">
                                     <a href="" target="_blank">
                                         <img class="card-image-top embed-responsive-item"
@@ -399,7 +409,9 @@
                                 <div class="card-body project">
                                     <h5 class="card-title projectLabel">Coming Soon</h5>
                                     <p class="card-text">Stay tuned for updates</p>
-                                    <a href="" class="btn" target="_blank"><i class="fab fa-github fa-2x"></i>
+                                </div>
+                                <div class="card-footer">
+                                    <a href="" class="btn align-self-auto" target="_blank"><i class="fab fa-github fa-2x"></i>
                                     </a>
                                 </div>
                             </div>
