added LIRI bot to projects

--- a/index.html
+++ b/index.html
@@ -460,8 +460,7 @@
                                     <div class="card-body project">
                                         <h5 class="card-title projectLabel">Random Trivia Game</h5>
                                         <p class="card-text">Random Trivia is a trivia game of random questions. It
-                                            utilizes
-                                            timeouts and intervals to limit the user's time to
+                                            utilizes timeouts and intervals to limit the user's time to
                                             answer the questions. It was created with HTML, CSS, Javascript, and
                                             jQuery.
                                         </p>
@@ -478,18 +477,23 @@
                             <div class="col-xs-12 col-sm-6 col-xl-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <a href="" target="_blank">
+                                        <a href="https://github.com/MR-Stan/liri-node-app" target="_blank">
                                             <img class="card-image-top embed-responsive-item"
-                                                src="assets/images/comingsoon.jpg" alt="Coming Soon Image">
+                                                src="assets/images/liri.PNG" alt="LIRI Bot Screen Shot">
                                         </a>
                                     </div>
                                     <div class="card-body project">
-                                        <h5 class="card-title projectLabel">Coming Soon</h5>
-                                        <p class="card-text">Stay tuned for updates</p>
+                                        <h5 class="card-title projectLabel">LIRI Bot</h5>
+                                        <p class="card-text">LIRI (Language Interpretation and Recognition Interface)
+                                            Bot is a command line node application that takes in a variety
+                                            of parameters and returns corresponding data. To accomplish this, it
+                                            utilizes three API's: BandsInTown, Spotify, and
+                                            OMDB. Along with these API's, LIRI Bot was built with node.js, axios,
+                                            moment.js, and dotenv.</p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="" class="btn align-self-auto" target="_blank"><i
-                                                class="fab fa-github fa-2x"></i>
+                                        <a href="https://github.com/MR-Stan/liri-node-app" class="btn align-self-auto"
+                                            target="_blank"><i class="fab fa-github fa-2x"></i>
                                         </a>
                                     </div>
                                 </div>
