updated skills cards

--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
                         <!-- add columns for all cards -->
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- html -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- html icon -->
-                                        <i class="fab fa-html5"></i>
+                                        <i class="fab fa-html5 fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         html
                                     </div>
@@ -142,14 +142,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- css -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- css icon -->
-                                        <i class="fab fa-css3-alt"></i>
+                                        <i class="fab fa-css3-alt fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         css
                                     </div>
@@ -158,14 +158,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- git -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- git icon -->
-                                        <i class="fab fa-git-alt"></i>
+                                        <i class="fab fa-git-alt fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         git
                                     </div>
@@ -174,14 +174,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- bootstrap -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://getbootstrap.com/" target="_blank">
                                         <!-- bootstrap icon -->
-                                        <i class="fab fa-bootstrap"></i>
+                                        <i class="fab fa-bootstrap fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         bootstrap
                                     </div>
@@ -192,14 +192,14 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- javascript -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://www.javascript.com/" target="_blank">
                                         <!-- javascript icon -->
-                                        <i class="fab fa-js-square"></i>
+                                        <i class="fab fa-js-square fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         javascript
                                     </div>
@@ -208,14 +208,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- python -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- python icon -->
-                                        <i class="fab fa-python"></i>
+                                        <i class="fab fa-python fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         python
                                     </div>
@@ -224,14 +224,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- npm -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://www.npmjs.com/" target="_blank">
                                         <!-- npm icon-->
-                                        <i class="fab fa-npm"></i>
+                                        <i class="fab fa-npm fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         npm
                                     </div>
@@ -240,14 +240,14 @@
                         </div>
                         <div class="col-lg-3 col-md-4 col-xs-6">
                             <!-- node.js -->
-                            <div class="card">
+                            <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://nodejs.org/en/" target="_blank">
                                         <!-- nodejs icon-->
-                                        <i class="fab fa-node-js"></i>
+                                        <i class="fab fa-node-js fa-lg"></i>
                                     </a>
                                 </div>
-                                <div class="card-body">
+                                <div class="card-body skills">
                                     <div class="card-text">
                                         node.js
                                     </div>
