updated skills cards

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="col-sm-3">
-                            <div class="card text-white bg-dark mb-2">
+                            <div class="card text-white bg-dark mb-2 curProj">
                                 <div class="card-body" id="currentProject">
                                     <h5 class="card-title">Current Project</h5>
                                     <a href="https://github.com/MR-Stan/liri-node-app" target="_blank"
@@ -124,13 +124,13 @@
                 <div class="card-body">
                     <div class="row">
                         <!-- add columns for all cards -->
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- html -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- html icon -->
-                                        <i class="fab fa-html5 fa-lg"></i>
+                                        <i class="fab fa-html5 fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -140,13 +140,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- css -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- css icon -->
-                                        <i class="fab fa-css3-alt fa-lg"></i>
+                                        <i class="fab fa-css3-alt fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -156,13 +156,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- git -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- git icon -->
-                                        <i class="fab fa-git-alt fa-lg"></i>
+                                        <i class="fab fa-git-alt fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -172,13 +172,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- bootstrap -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://getbootstrap.com/" target="_blank">
                                         <!-- bootstrap icon -->
-                                        <i class="fab fa-bootstrap fa-lg"></i>
+                                        <i class="fab fa-bootstrap fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -189,14 +189,15 @@
                             </div>
                         </div>
                     </div>
+                    <br>
                     <div class="row">
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- javascript -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://www.javascript.com/" target="_blank">
                                         <!-- javascript icon -->
-                                        <i class="fab fa-js-square fa-lg"></i>
+                                        <i class="fab fa-js-square fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -206,13 +207,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- python -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="" target="_blank">
                                         <!-- python icon -->
-                                        <i class="fab fa-python fa-lg"></i>
+                                        <i class="fab fa-python fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -222,13 +223,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- npm -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://www.npmjs.com/" target="_blank">
                                         <!-- npm icon-->
-                                        <i class="fab fa-npm fa-lg"></i>
+                                        <i class="fab fa-npm fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -238,13 +239,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-4 col-xs-6">
+                        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
                             <!-- node.js -->
                             <div class="card roundCorner">
                                 <div class="card-img-top">
                                     <a href="https://nodejs.org/en/" target="_blank">
                                         <!-- nodejs icon-->
-                                        <i class="fab fa-node-js fa-lg"></i>
+                                        <i class="fab fa-node-js fa-5x"></i>
                                     </a>
                                 </div>
                                 <div class="card-body skills">
@@ -322,7 +323,7 @@
                         <div class="row projectRow">
 
                             <!-- TollTally -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://mr-stan.github.io/Project1/" target="_blank">
@@ -352,7 +353,7 @@
                             </div>
 
                             <!-- Star Wars RPG -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://mr-stan.github.io/unit-4-game/" target="_blank">
@@ -379,7 +380,7 @@
                             </div>
 
                             <!-- Train Scheduler -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
@@ -416,7 +417,7 @@
                         <div class="row projectRow">
 
                             <!-- GifTastic -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
@@ -448,7 +449,7 @@
                             </div>
 
                             <!-- Trivia Game -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
@@ -474,7 +475,7 @@
                             </div>
 
                             <!-- Coming Soon -->
-                            <div class="col-xs-12 col-sm-6 col-xl-4">
+                            <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <a href="https://github.com/MR-Stan/liri-node-app" target="_blank">
