replaced random trivia game with word guess command line

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             <div class="col-xs-12 col-sm-10 col-md-8">
                 <div class="card text-center main-card">
                     <h1 class="card-header">Projects</h1>
-                    <div class="card-body">
+                    <div class="card-body" id="projectCard">
                         <!-- row 1 featured -->
                         <h4 class="card-title">Featured</h4>
                         <hr>
@@ -448,33 +448,34 @@
                                 </div>
                             </div>
 
-                            <!-- Trivia Game -->
+                            <!-- Command Line Word Guess -->
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <a href="https://mr-stan.github.io/TriviaGame/" target="_blank">
+                                        <a href="https://github.com/MR-Stan/Word-Guess-Command-Line-Game"
+                                            target="_blank">
                                             <img class="card-image-top embed-responsive-item"
-                                                src="assets/images/trivia.PNG"
-                                                alt="Random Trivia Game Web Application Screenshot">
+                                                src="assets/images/wordguesscommandline.PNG"
+                                                alt="Word Guess Command Line Image">
                                         </a>
                                     </div>
                                     <div class="card-body project">
-                                        <h5 class="card-title projectLabel">Random Trivia Game</h5>
-                                        <p class="card-text">Random Trivia is a trivia game of random questions. It
-                                            utilizes timeouts and intervals to limit the user's time to
-                                            answer the questions. It was created with HTML, CSS, Javascript, and
-                                            jQuery.
+                                        <h5 class="card-title projectLabel">Word Guess Command Line</h5>
+                                        <p class="card-text">Word Guess Command Line Game is a hangman style game played
+                                            from the console where the user guesses a variety of words
+                                            one letter at a time. This game was made with node.js and the npm inquirer
+                                            package.
                                         </p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="https://github.com/MR-Stan/TriviaGame" class="btn" target="_blank"><i
-                                                class="fab fa-github fa-2x"></i>
+                                        <a href="https://github.com/MR-Stan/Word-Guess-Command-Line-Game" class="btn"
+                                            target="_blank"><i class="fab fa-github fa-2x"></i>
                                         </a>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Coming Soon -->
+                            <!-- LIRI Bot -->
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
