--- a/index.html
+++ b/index.html
@@ -379,32 +379,24 @@
                                 </div>
                             </div>
 
-                            <!-- Train Scheduler -->
+                            <!-- BAMazon -->
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <a href="https://mr-stan.github.io/Train-Scheduler/" target="_blank">
+                                        <a href="https://github.com/MR-Stan/BAMazon" target="_blank">
                                             <img class="card-image-top embed-responsive-item"
-                                                src="assets/images/train.PNG"
-                                                alt="Train Scheduler Web Application Screenshot">
+                                                src="assets/images/bamazon.PNG"
+                                                alt="BAMazon Command Line Store Screenshot">
                                         </a>
                                     </div>
                                     <div class="card-body project">
-                                        <h5 class="card-title projectLabel">Train Scheduler</h5>
-                                        <p class="card-text">This application is a user input based scheduler that
-                                            utilizes
-                                            Firebase to retain the input information. It is themed as
-                                            a train scheduler, but it can easily be converted into a to-do list as
-                                            well
-                                            as a
-                                            variety of other applications. It was
-                                            created with HTML, CSS, Bootstrap, Javascript, jQuery, Moment.js, and
-                                            Firebase.
+                                        <h5 class="card-title projectLabel">BAMazon</h5>
+                                        <p class="card-text">BAMazon is a command line based store.
                                         </p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="https://github.com/MR-Stan/Train-Scheduler" class="btn"
-                                            target="_blank"><i class="fab fa-github fa-2x"></i>
+                                        <a href="https://github.com/MR-Stan/BAMazon" class="btn" target="_blank"><i
+                                                class="fab fa-github fa-2x"></i>
                                         </a>
                                     </div>
                                 </div>
