added friend finder

--- a/index.html
+++ b/index.html
@@ -408,32 +408,25 @@
                         <hr>
                         <div class="row projectRow">
 
-                            <!-- GifTastic -->
+                            <!-- Friend Finder -->
                             <div class="col-sm-12 col-lg-4">
                                 <div class="card roundCorner h-100">
                                     <div class="embed-responsive embed-responsive-16by9">
-                                        <a href="https://mr-stan.github.io/GifTastic/" target="_blank">
+                                        <a href="https://vast-gorge-11966.herokuapp.com/" target="_blank">
                                             <img class="card-image-top embed-responsive-item"
-                                                src="assets/images/gifTastic.PNG"
-                                                alt="GifTastic Web Application Screenshot">
+                                                src="assets/images/friend.PNG" alt="Friend Finder Web Application">
                                         </a>
                                     </div>
                                     <div class="card-body project">
-                                        <h5 class="card-title projectLabel">GifTastic</h5>
-                                        <p class="card-text">GifTastic is a dynamic web page that utilizes the
-                                            user's
-                                            input
-                                            to create a corresponding button. When the user clicks
-                                            the button an AJAX call is made to the Giphy API and a specified number
-                                            of
-                                            gifs
-                                            are displayed. The gifs are initially
-                                            static, but can be played with a single click and paused again with an
-                                            additional click. This site was created with
-                                            HTML, CSS, JavaScript, and jQuery.</p>
+                                        <h5 class="card-title projectLabel">Friend Finder</h5>
+                                        <p class="card-text">Friend Finder is a match making application
+                                            which was created using the express package for node.js. This app
+                                            utilizes express to serve 1 static HTML page, 1 dynamic HTML page,
+                                            and 2 API routes to get and post data.
+                                        </p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="https://github.com/MR-Stan/GifTastic" class="btn" target="_blank"><i
+                                        <a href="https://github.com/MR-Stan/FriendFinder" class="btn" target="_blank"><i
                                                 class="fab fa-github fa-2x"></i>
                                         </a>
                                     </div>
